[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Ciaran De Groot <ciaran.deg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
demo = "demo.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
